--- a/html/layoutshifter.html
+++ b/html/layoutshifter.html
@@ -14,6 +14,9 @@
       <div class = "home-link">
         <a href= "../index.html">Go Back</a>
       </div>
+      <div class = "message">
+        <h1> Change the screen size to see different responsive layouts!</h1>
+      </div>
     	<div class= "box dark_blue"></div>
   		<div class= "container" id= "container2">
   			<div class= "box light_blue"></div>
