--- a/html/offcanvas.html
+++ b/html/offcanvas.html
@@ -14,6 +14,9 @@
     <div class = "home-link">
       <a href= "../index.html">Go Back</a>
     </div>
+    <div class = "message">
+      <h1> Change the screen size to see different responsive layouts!</h1>
+    </div>
     <img class = "nav-bars" src = "../images/hamburger.png" alt="nav-icon">
     <nav class = "nav">
       <div class = "links">
